test/testFiles/fail/test1_fail.fcl
_ : 5
__ : 6

tab1{ a : 5 b : 3 c : 6 }

tab2: a:5 b:6 c:7

tab3:{ a:5, b:6, c:7 }

